# cover-drive

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  health.py  logging_config.py
app/cricsheet/: __init__.py  acquire.py  errors.py  manifest.py  models.py  parse.py
app/dataset/: __init__.py  assemble.py  eval_set.py  format.py  hub.py  split.py
app/distill/: __init__.py  errors.py  filters.py  generate.py  judge_filter.py  manifest.py  prompt.py  records.py  sampling.py  seed.py  teacher.py
app/eval/: __init__.py  audit.py  compare.py  judge.py
app/features/: __init__.py  build.py  serialize.py  state.py
app/serve/: __init__.py  app.py  ball.py  engine.py  llama_runtime.py  matches.py  runtime.py  scoreboard.py  transformers_runtime.py
app/train/: __init__.py  dataset.py  train.py
configs/: __init__.py  data.py  distill.py  personas.py  serve.py  settings.py  train.py
infra/runpod/: .gitkeep  LAUNCH.txt  requirements-pod.txt  run.sh  setup.sh
infra/space/: Dockerfile  server.py
notebooks/: .gitkeep
scripts/: .gitkeep  __init__.py  acquire.py  assemble.py  audit.py  build_catalog.py  build_dataset.py  distill.py  judge_filter.py  push_ball_data.py  serve.py  train.py
tests/: test_acquire.py  test_build_integration.py  test_cricsheet_parse.py  test_dataset_assemble.py  test_dataset_format.py  test_dataset_hub_eval.py  test_distill_filters.py  test_distill_generate.py  test_distill_manifest.py  test_distill_prompt.py  test_distill_sampling.py  test_distill_split.py  test_distill_teacher.py  test_eval_audit.py  test_eval_compare.py  test_eval_judge.py  test_features_state.py  test_health.py  test_judge_filter.py  test_logging_config.py  test_manifest.py  test_serialize.py  test_serve_app.py  test_serve_engine.py  test_serve_matches.py  test_serve_runtime.py  test_serve_scoreboard.py  test_settings.py  test_train_dataset.py
tests/fixtures/: eval_reference.jsonl  sample_match.golden.jsonl  sample_match.json
web/: eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/public/: catalog.json
web/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/src/components/: Bracket.module.css  Bracket.tsx  CommentaryFeed.module.css  CommentaryFeed.tsx  EventBurst.module.css  EventBurst.tsx  MatchPicker.module.css  MatchPicker.tsx  PersonaSwitcher.module.css  PersonaSwitcher.tsx  ReplayControls.module.css  ReplayControls.tsx  Scoreboard.module.css  Scoreboard.tsx  SeasonSelector.module.css  SeasonSelector.tsx  Skeleton.module.css  Skeleton.tsx  TeamBadge.module.css  TeamBadge.tsx
web/src/lib/: api.ts  bracket.ts  catalog.ts  personas.ts  teams.ts  types.ts  useReplay.ts
