[project]
name = "cricket-commentary"
version = "0.0.0"
description = "Ball-by-ball cricket commentary voice engine: a fine-tuned small language model that narrates deliveries in a chosen persona, with every fact supplied deterministically."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "kartikeyamandhar" }]
dependencies = [
  "pydantic-settings>=2.6,<3",
  "structlog>=24.4,<25",
  "anthropic>=0.49,<1",
  "huggingface-hub>=0.25,<1",
]

[dependency-groups]
dev = [
  "ruff>=0.8.4,<0.9",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6.0,<7",
  "pre-commit>=4.0,<5",
  # Control-plane only: the Qwen tokenizer for the no-GPU data-path check
  # (app/train/dataset.py). The GPU stack (unsloth/torch/trl) installs on the pod
  # via infra/runpod/requirements-pod.txt, never on the Mac.
  "transformers>=4.46,<5",
  "jinja2>=3.1,<4",  # transformers renders the chat template via Jinja
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# app/ is the library; configs/ holds typed settings models. Both are shipped so
# `import app` and `import configs` resolve after `uv sync`. scripts/ holds CLI
# entrypoints run by path and is deliberately not packaged.
[tool.hatch.build.targets.wheel]
packages = ["app", "configs"]

# ---------------------------------------------------------------------------
# ruff: single tool for lint + format (replaces black, isort, flake8).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "configs", "scripts", "tests"]

[tool.ruff.lint]
# Pragmatic strict-ish set. D (docstrings) is intentionally deferred to avoid
# blocking on stub modules; docstrings are written by convention regardless.
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "PTH", "TID", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app", "configs"]

[tool.ruff.lint.per-file-ignores]
# Tests may shadow builtins and use assert-style fixtures freely.
"tests/**" = ["A", "N802"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

# ---------------------------------------------------------------------------
# mypy: strict, with the pydantic plugin so settings models are checked.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# Explicit targets so a bare `uv run mypy` (pre-commit hook) has files to check;
# the `uv run mypy .` verify command overrides this with the whole tree.
files = ["app", "configs", "scripts", "tests"]
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
pretty = true
# `mypy .` (the verify command) scans the tree; exclude non-source trees.
exclude = ['^web/', '^data/', '^\.venv/', '^build/', '^dist/']

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# GPU/ML libraries are untyped or pod-only; let strict mypy treat them as Any rather
# than fail on missing stubs. The data path stays fully typed around them.
[[tool.mypy.overrides]]
module = ["transformers.*", "unsloth.*", "trl.*", "datasets.*", "torch.*", "wandb.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest + coverage.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `app`/`configs` import deterministically,
# independent of the editable-install state under `uv run`.
pythonpath = ["."]
addopts = "-q --cov=app --cov=configs --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["app", "configs"]
# app/train/train.py is the GPU pod entrypoint (unsloth/torch); it cannot run in CI
# and is validated on the pod. The GPU-free data path (app/train/dataset.py) IS tested.
omit = ["app/train/train.py"]

[tool.coverage.report]
show_missing = true
# Stub package markers carry no executable statements; nothing to exclude yet.
